--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,177 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Rubik');
+
+* {
+  font-family: 'Rubik', sans-serif; 
+  box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  background: -moz-radial-gradient(center, ellipse cover, rgba(164,138,171,1) 0%, rgba(61,53,69,1) 64%, rgba(11,19,22,1) 95%, rgba(11,19,22,1) 100%); /* ff3.6+ */
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(164,138,171,1)), color-stop(64%, rgba(61,53,69,1)), color-stop(95%, rgba(11,19,22,1)), color-stop(100%, rgba(11,19,22,1))); /* safari4+,chrome */
+background:-webkit-radial-gradient(center, ellipse cover, rgba(164,138,171,1) 0%, rgba(61,53,69,1) 64%, rgba(11,19,22,1) 95%, rgba(11,19,22,1) 100%); /* safari5.1+,chrome10+ */
+background: -o-radial-gradient(center, ellipse cover, rgba(164,138,171,1) 0%, rgba(61,53,69,1) 64%, rgba(11,19,22,1) 95%, rgba(11,19,22,1) 100%); /* opera 11.10+ */
+background: -ms-radial-gradient(center, ellipse cover, rgba(164,138,171,1) 0%, rgba(61,53,69,1) 64%, rgba(11,19,22,1) 95%, rgba(11,19,22,1) 100%); /* ie10+ */
+background:radial-gradient(ellipse at center, rgba(164,138,171,1) 0%, rgba(61,53,69,1) 64%, rgba(11,19,22,1) 95%, rgba(11,19,22,1) 100%); /* w3c */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#A48AAB', endColorstr='#0B1316',GradientType=1 ); /* ie6-9 */
+/*     background-color: #607D8B; 
+    background: url("https://dl.dropboxusercontent.com/u/9311890/purpleBlur.jpg") center center no-repeat; */
+    background-size: cover;
+}
+
+.container {
+  margin-top: 10%;
+}
+
+#calculator {
+  border: 1px solid #ddd;
+  width: 330px;
+  height: 445px;
+  margin: 20px auto;
+  border-radius: 10px;
+  padding: 20px;
+/*   background-color: #FF6766;  */
+  background-color: rgba(0,0,0,0.2); 
+    -webkit-box-shadow: 0px 50px 50px -45px rgba(0,0,0,0.85);
+-moz-box-shadow: 0px 50px 50px -45px rgba(0,0,0,0.85);
+box-shadow: 0px 50px 50px -45px rgba(0,0,0,0.85);
+}
+
+.top span.clear {
+	float: left;
+  width: 45px;
+  height: 45px;
+/*   border: 1px solid #ddd; */
+  border-radius: 50%;
+  margin-left: 8px;
   text-align: center;
+  line-height: 35px;
+	text-align: center;
+  font-size: 1.4em;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.top span.clear:hover {
+  color: #777;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.top span.clear:active {
+	background-color: rgba(255,255,255,0.3);
+  float: left;
+  width: 45px;
+  height: 45px;
+/*   border: 1px solid #555; */
+/* //  border-radius: 50%; */
+  margin-left: 8px;
+  text-align: center;
+  line-height: 35px;
+	text-align: center;
+  font-size: 1.4em;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.top #display {
+	height: 45px;
+	width: 270px;
+	margin-left: 10px;
+	float: left;
+	margin-bottom: 10px;
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 3px;
+  line-height: 45px;
+  padding: 0 15px 0 10px;
+  font-size: 1.8em;
+  text-align: right;
+  overflow: hidden;
+  color: #eee;
 }
 
-.App-link {
-  color: #61dafb;
+.keys span{
+  float: left;
+  width: 60px;
+  height: 60px;
+/*   border: 1px solid #ddd; */
+  border-radius: 50%;
+  text-align: center;
+  margin: 6px;
+  line-height: 50px;
+	text-align: center;
+  font-size: 2em;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.keys span:hover{
+  color: #777;
 }
+
+sup {
+  font-size: 0.6em;
+  margin-left:2px;
+}
+
+.unselectable {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+}
+
+/* 
+========================
+      BUTTON
+========================
+*/
+.btn {
+	color: #eee;
+	transition: all 0.5s;
+	position: relative;
+  border-radius: 100%;
+  padding: 4px 0;
+}
+.btn::active {
+  background-color: rgba(255,255,255,0.3);
+}
+
+.btn::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	background-color: rgba(255,255,255,0.2);
+	transition: all 0.3s;
+  border-radius: 100%;
+}
+.btn:hover::before {
+	opacity: 0 ;
+	transform: scale(0.5,0.5);
+}
+.btn::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	opacity: 0;
+	transition: all 0.3s;
+	border: 1px solid rgba(255,255,255,0.5);
+	transform: scale(1.2,1.2);
+  border-radius: 100%;
+}
+.btn:hover::after {
+	opacity: 1;
+	transform: scale(1,1);
+}
+
